--- a/.github/workflows/mlops.yml
+++ b/.github/workflows/mlops.yml
@@ -28,7 +28,7 @@ jobs:
             - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip
-                pip install -r requirments.txt
+                pip install -r requirements.txt
 
             # Step 4 Run Unit Tests
             - name: Run unit tests
